step 1 - implement smart/dumb with a facade structure

--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
-
-  <app-zipcode-entry> </app-zipcode-entry>
-  <app-current-conditions></app-current-conditions>
-
+  <app-zipcode-entry (locationAdded)="facade.addLocation($event)" />
+  <app-current-conditions
+    [currentConditionsByZip]="facade.state().conditionsList"
+  />
 </div>
