step 1 - implement store with BehaviorSubject

--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
   <app-zipcode-entry (locationAdded)="facade.addLocation($event)" />
   <app-current-conditions
-    [currentConditionsByZip]="facade.state().conditionsList"
+    [currentConditionsByZip]="facade.conditionsList$ | async"
   />
 </div>
