step 1 - plug facade state to dumb component @Input property

--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -1,6 +1,4 @@
 <div class="container-fluid">
   <app-zipcode-entry (locationAdded)="facade.addLocation($event)" />
-  <app-current-conditions
-    [currentConditionsByZip]="facade.conditionsList$ | async"
-  />
+  <app-current-conditions [currentConditionsByZip]="facade.state$ | async" />
 </div>
