--- a/src/app/main-page/current-conditions/current-conditions.component.html
+++ b/src/app/main-page/current-conditions/current-conditions.component.html
@@ -1,3 +1,4 @@
+<!-- <pre>{{ currentConditionsByZip | json }}</pre> -->
 <div>
   <div
     *ngFor="let location of currentConditionsByZip"
@@ -20,9 +21,7 @@
       </p>
     </div>
     <div>
-      <span class="close" (click)="locationRemoved(location.zip)"
-        >&times;</span
-      >
+      <span class="close" (click)="locationRemoved(location.zip)">&times;</span>
       <img [src]="weatherService.getWeatherIcon(location.data.weather[0].id)" />
     </div>
   </div>
