--- a/src/app/main-page/current-conditions/current-conditions.component.html
+++ b/src/app/main-page/current-conditions/current-conditions.component.html
@@ -1,10 +1,6 @@
-<!-- <pre>{{ currentConditionsByZip | json }}</pre> -->
 <div>
-  <div
-    *ngFor="let location of currentConditionsByZip"
-    class="well flex"
-    (click)="showForecast(location.zip)"
-  >
+  @for (location of currentConditionsByZip; track location.zip) {
+  <div class="well flex" (click)="showForecast(location.zip)">
     <div>
       <h3>{{ location.data.name }} ({{ location.zip }})</h3>
       <h4>Current conditions: {{ location.data.weather[0].main }}</h4>
@@ -25,4 +21,5 @@
       <img [src]="weatherService.getWeatherIcon(location.data.weather[0].id)" />
     </div>
   </div>
+  }
 </div>
