step 1 - plug event removeLocation to main page facade

--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -1,4 +1,7 @@
 <div class="container-fluid">
   <app-zipcode-entry (locationAdded)="facade.addLocation($event)" />
-  <app-current-conditions [currentConditionsByZip]="facade.state$ | async" />
+  <app-current-conditions
+    [currentConditionsByZip]="facade.state$ | async"
+    (locationRemoved)="facade.removeLocation($event)"
+  />
 </div>
