--- a/src/app/main-page/current-conditions/current-conditions.component.html
+++ b/src/app/main-page/current-conditions/current-conditions.component.html
@@ -17,7 +17,9 @@
       </p>
     </div>
     <div>
-      <span class="close" (click)="locationRemoved(location.zip)">&times;</span>
+      <span class="close" (click)="locationRemoved.emit(location.zip)"
+        >&times;</span
+      >
       <img [src]="weatherService.getWeatherIcon(location.data.weather[0].id)" />
     </div>
   </div>
