--- a/src/app/main-page/current-conditions/current-conditions.component.html
+++ b/src/app/main-page/current-conditions/current-conditions.component.html
@@ -1,3 +1,3 @@
 <div>
-  <app-tabs [tabOptionList]="tabOptionList" />
+  <app-tabs [tabOptionList]="tabOptionList" (tabClosed)="onTabClose($event)" />
 </div>
