step 2 - display tab and location card correctly

--- a/src/app/main-page/condition-detail-card/condition-detail-card.component.css
+++ b/src/app/main-page/condition-detail-card/condition-detail-card.component.css
@@ -1,3 +1,10 @@
 :host {
   display: block;
 }
+
+.card-container {
+  display: flex;
+  flex-wrap: nowrap;
+  background-color: #f5f5f5;
+  padding: 20px;
+}
