step 3 - move files in folder structure and separate weather service

--- a/src/app/forecasts-list/forecasts-list.component.html
+++ b/src/app/forecasts-list/forecasts-list.component.html
@@ -12,7 +12,7 @@
         {{ dailyForecast.temp.max | number : ".0-0" }}
 
         <img
-          [src]="weatherService.getWeatherIcon(dailyForecast.weather[0].id)"
+          [src]="weatherIconService.getIcon(dailyForecast.weather[0].id)"
           class="icon"
         />
       </li>
