--- a/src/app/main-page/condition-detail-card/condition-detail-card.component.html
+++ b/src/app/main-page/condition-detail-card/condition-detail-card.component.html
@@ -16,7 +16,7 @@
   </div>
   <div>
     <img
-      [src]="weatherService.getWeatherIcon(weatherCondition.data.weather[0].id)"
+      [src]="weatherIconService.getIcon(weatherCondition.data.weather[0].id)"
     />
   </div>
 </div>
